--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.6.10",
+    "flowbite": "^1.4.1",
     "fuse.js": "^6.5.3",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.5",
@@ -45,6 +47,8 @@
     "autoprefixer": "^10.4.4",
     "babel-plugin-styled-components": "^2.0.6",
     "eslint": "^8.11.0",
-    "postcss": "^8.4.12"
+    "postcss": "^8.4.12",
+    "tailwind-styled-components": "^2.1.4",
+    "tailwindcss": "^3.0.23"
   }
 }
